# applied-cs

./: .clang-format  .gitignore  CMakeLists.txt  Makefile.mak  Makefile.win
00lab/: README.md  main.cpp
01lab/: README.md  main.cpp
01sem/: README.md  main.cpp
02lab/: README.md  class.cpp
02sem/: hash.cpp  main.cpp
03lab/: README.md  main.cpp
04lab/: README.md  main.cpp
05lab/: README.md  main.cpp
06lab/: CMakeLists.txt  main.cpp  test.KNP
s2e1/: README.md  main.cpp
s2e2/: README.md  main.cpp
s2e3/: README.md  example.cpp  main.cpp
s2e4/: README.md  main.cpp
s2e5/: main.cpp
s2e6/: a.out  main.cpp
s2e7/: main.cpp
s2e8/: main.cpp  studs.txt
